[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-selib"
version = "0.2.0"
description = "A simple speech enhancement library using ONNX models"
readme = "README.md"
requires-python = ">=3.8.0"
authors = [
    { name = "nipponjo", email = "nipponjo.git@gmail.com" },
]
dependencies = [
    "numpy",
    "librosa",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "onnxruntime; sys_platform == 'darwin'",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/nipponjo/selib"
Repository = "https://github.com/nipponjo/selib"
Issues = "https://github.com/nipponjo/selib/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["selib", "selib.*"]
exclude = ["tmp", "tmp.*", "data", "data.*", "dist", "build", "*.egg-info"]
